<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MC-Schnitzeljagd</string>
    <string name="action_settings">Settings</string>
    <string name="finished_game_text">Congratulations you finished the Game!</string>
    <string name="locationTest">Ingos Test Button</string>
    <string name="lat">Current Latitude</string>
    <string name="lng">Current Longitude</string>
    <string name="latGoal">Goal Latitude</string>
    <string name="lngGoal">Goal Longitude</string>
    <string name="quality">Signal</string>
    <string name="conStateInfo">Listener connected</string>
    <string name="updates">Updates received</string>
    <string name="listener">Listener</string>
    <string name="refresh">Refresh</string>
    <string name="toggleUpdates">Toogle Updates</string>
    <string name="toggleGeofence">Toogle Geofence</string>
    <string name="title_activity_main_game">MainGameActivity</string>
    <string name="organizer_mode_button">Organizer</string>
    <string name="player_mode_button">Player</string>
    <string name="welcome_message">Welcome to MC Schnitzeljagd</string>
    <string name="title_activity_organizer_home">OrganizerHomeActivity</string>
    <string name="organizer_start_game_button">Start New Quest</string>
    <string name="organizer_load_game_button">Load Quest</string>
    <string name="title_activity_load_game">LoadGameActivity</string>
    <string name="load_game">Load Quest</string>
    <string name="load_game_hint">Enter Quest Id</string>
    <string name="title_activity_setup_game">SetupGameActivity</string>
    <string name="setup_game_name">Enter gamename here</string>
    <string name="setup_game_toggle_record">Record</string>
    <string name="setup_game_toggle_live">Live</string>
    <string name="setup_game_live_head_start">Enter head start time</string>
    <string name="setup_game_create">Create Quest</string>
    <string name="setup_game_description">Description goes here</string>
    <string name="title_activity_player_home">PlayerHomeActivity</string>
    <string name="save_play_name_button">Save Name</string>
    <string name="player_home_info_text">Here comes the infotext for the Player</string>
    <string name="player_name_hint">Player Name</string>
    <string name="title_activity_quest">QuestActivity</string>
    <string name="mandatory_riddle_button">Mandatory Riddle</string>
    <string name="additional_riddle_button">Additional Riddle</string>
    <string name="title_activity_riddle">RiddleActivity</string>
    <string name="title_activity_player_riddle">PlayerRiddleActivity</string>
    <string name="play_game_group_name">Enter group name</string>
    <string name="play_game_start_game_button">Start Quest</string>
    <string name="play_game_description">Game descrition</string>
    <string name="title_activity_hint">HintActivity</string>
    <string name="hint_info">Current Game Infos</string>
    <string name="hint_buy_hint_button">Buy hint</string>
    <string name="title_activity_riddle_list">RiddleListActivity</string>
    <string name="play_game_home_load_hint">Enter Game Code</string>
    <string name="riddle_questions">Question?</string>
    <string name="riddle_answer_a">A</string>
    <string name="riddle_answer_b">B</string>
    <string name="riddle_answer_c">C</string>
    <string name="riddle_answer_d">D</string>
    <string name="title_activity_organizer_create_poi">OrganizerCreatePoiActivity</string>
    <string name="hint_prompt">Text</string>
    <string name="load_game_button">Load Game</string>
    <string name="errorEnterCode">Enter game code first and group name!</string>
    <string name="errorCodeNotFound">Game not found!</string>
    <string name="text_hint_hint">Enter your hint here!</string>
    <string name="no_more_hints">No more hints for this point!</string>

    <string-array name="hint_arrays">
        <item>Text</item>
        <item>Image</item>
    </string-array>
    
    <string-array name="image_arrays">
        <item>Normal</item>
        <item>Gray</item>
        <item>ColorShift</item>
        <item>Blur</item>
    </string-array>

	<string name="image_prompt">Image Mode</string>
    <string name="riddle_text_hint">Please type in your ridde text here... </string>
    <string name="riddle_answer_hint">Please type in your ridde answer here... </string>
    <string name="riddle_is_mandatory_checkbox">Mandatory Riddle</string>
    <string name="hint_information_text">Flip through Hints</string>
    <string name="organizer_create_hint">Create Hint</string>
    <string name="organizer_create_man_riddle">Create riddle</string>
    <string name="organizer_finish_game">Finish game</string>
    <string name="organizer_create_next_hint">Go to next Station</string>
    <string name="title_activity_publish_game">PublishGameActivity</string>
    <string name="publish_game_text">Publish Game Code</string>
    <string name="save_game_admin_code">Save administration code</string>
    <string name="back_to_main_button">Back to Start</string>
    <string name="record_hint_button">Record hint</string>
    <string name="hint_spinner_entry_audio">Audio Snippet</string>
    <string name="save_hint_button">Save hint</string>
    <string name="save_riddle_button">Save riddle</string>
    <string name="locationUpdatesOff">Updates Off</string>
    <string name="locationUpdatesOn">Updates On</string>
    <string name="locationGeofenceOff">Geofence Off</string>
    <string name="locationGeofenceOn">Geofence On</string>
    <string name="distanceInfo">Distance to goal</string>
    <string name="questNotFound">Quest not found!</string>
    <string name="unkownError">Unknown error. Game not initialized!</string>
    <string name="setup_game_author_name_hint">Enter Author name here</string>
    <string name="requiredFiledNotSet">Required field not set!</string>
    <string name="title_activity_player_text_hint">PlayerTextHintActivity</string>
    <string name="title_activity_list_hints">ListHintsActivity</string>
    <!--
    <string name="connection_error_code">Connection failure error code: %1$d</string>
    <string name="connection_error_disabled">Google Play services is disabled</string>
    <string name="connection_error_internal">An internal error occurred</string>
    <string name="connection_error_invalid">The version of Google Play services on this device is not authentic</string>
    <string name="connection_error_invalid_account">The specified account name is invalid</string>
    <string name="connection_error_license_check_failed">The app is not licensed to the user</string>
    <string name="connection_error_message">Connection failure error message: %1$s</string>
    <string name="connection_error_misconfigured">The application is misconfigured</string>
    <string name="connection_error_missing">Google Play services is missing</string>
    <string name="connection_error_needs_resolution">Additional resolution is required</string>
    <string name="connection_error_network">A network error occurred</string>
    <string name="connection_error_outdated">Google Play services is out of date</string>
    <string name="connection_error_sign_in_required">The user is not signed in</string>
    <string name="connection_error_unknown">An unknown error occurred</string>
    -->
    <string name="daotest">DAO Test</string>
    <string name="title_activity_quest_daotest">QuestDAOTestActivity</string>
    <string name="changeMapType">Next Maptype</string>
    <string name="organizer_record_hint">Add Hint</string>
    <string name="title_activity_player_multimedia_hint">PlayerMultimediaHintActivity</string>
    <string name="startCamera">Take Picture</string>
    <string name="go_to_next_riddle">Go to next Riddle</string>
    <string name="skip_riddle">Skip this Riddle</string>
    <string name="title_activity_finish">FinishActivity</string>

</resources>
