<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="248dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/latInfo"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/lat" />

        <TextView
            android:id="@+id/curLat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/lngInfo"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/lng" />

        <TextView
            android:id="@+id/curLng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/quality"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/quality" />

        <TextView
            android:id="@+id/curQuality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/conStateInfo"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/conStateInfo" />

        <TextView
            android:id="@+id/conState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/refreshInfo"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/updates" />

        <TextView
            android:id="@+id/count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/latGoalInfo"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/latGoal" />

        <TextView
            android:id="@+id/goalLat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/lngGoalInfo"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/lngGoal" />

        <TextView
            android:id="@+id/goalLng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/distanceInfo"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/distanceInfo" />

        <TextView
            android:id="@+id/distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/refresh"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:onClick="refreshLocation"
            android:text="@string/refresh" />

        <ToggleButton
            android:id="@+id/toggleUpdates"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textOff="@string/locationUpdatesOff"
			android:textOn="@string/locationUpdatesOn"
            android:onClick="toggleUpdates"
            android:text="@string/toggleUpdates" />

        <ToggleButton
            android:id="@+id/toggleGeofence"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textOff="@string/locationGeofenceOff"
			android:textOn="@string/locationGeofenceOn"
            android:onClick="toggleGeofence"
            android:text="@string/toggleGeofence" />
        
    </LinearLayout>
</LinearLayout>