<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
    
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical" >

            <TextView
        android:id="@+id/textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_message" />
        
        <ImageView
            android:id="@+id/share_pinterest_id"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:src="@drawable/ic_launcher" />

        <Button
            android:id="@+id/player_mode_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startPlayerActivity"
            android:text="@string/player_mode_button" />

        <Button
            android:id="@+id/organizer_mode_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startOrganizerActivity"
            android:text="@string/organizer_mode_button" />

        <Button
	        android:id="@+id/toLocationTestActivity"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="30dp"
	        android:onClick="startActivityLocationTest"
	        android:text="@string/locationTest" />

       <Button
           android:id="@+id/button1"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"           
	       android:onClick="startActivityQuestDAOTest"
           android:text="@string/daotest" />

    </LinearLayout>





</RelativeLayout>