<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PlayerHomeActivity" >

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_alignParentTop="true"
      android:layout_centerHorizontal="true"
      android:orientation="vertical" >

      <ImageView
          android:id="@+id/share_pinterest_id"
          android:layout_width="match_parent"
          android:layout_height="100dp"
          android:src="@drawable/ic_launcher" />

      <TextView
          android:id="@+id/game_description_text"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/play_game_description"          
          android:textAppearance="?android:attr/textAppearanceLarge" />

       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_weight="0.09"
           android:orientation="horizontal" >

      <EditText
          android:id="@+id/load_game_code"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"          
          android:ems="10"
          android:hint="@string/play_game_home_load_hint" >

          <requestFocus android:layout_width="wrap_content" />

          </EditText>

          <Button
              android:id="@+id/load_game_button"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:onClick="loadGame"
              android:text="@string/load_game_button" />
         
      </LinearLayout>

       <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="0.63"
          android:orientation="horizontal" >

          <EditText
              android:id="@+id/group_name_id"
              android:layout_width="168dp"
              android:layout_height="wrap_content"
              android:ems="10"
              android:hint="@string/play_game_group_name" >              
          </EditText>

          <Button
              android:id="@+id/start_game_button"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:onClick="startQuest"
              android:text="@string/play_game_start_game_button" />
          
      </LinearLayout>

   		<TextView
            android:id="@+id/error_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="#FF0000" 
         />
       
  </LinearLayout>

</RelativeLayout>
