<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PlayerTextHintActivity" >

     <LinearLayout
         android:id="@+id/linearLayout1"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:orientation="vertical" >

         <EditText
             android:visibility="gone"
             android:id="@+id/hint_text_hint_id"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="0.78"
             android:ems="10"
             android:hint="@string/text_hint_hint" >
             <requestFocus />
         </EditText>
         <LinearLayout 
             android:id="@+id/image_layout"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="0.78"
             android:background="@color/common_action_bar_splitter"
             android:visibility="gone">

             <ImageView
                 android:id="@+id/image_view_preview"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.78"                 
                 android:src="@drawable/common_signin_btn_icon_light" />
             
              <Spinner
                android:id="@+id/image_spinner_id"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:entries="@array/image_arrays"
                android:prompt="@string/image_prompt" />
             
             <Button
                 android:id="@+id/image_button_id"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:onClick="startCamera"
                 android:text="@string/startCamera" />

         </LinearLayout>

         <Button
             android:id="@+id/save_hint_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="18dp"
             android:onClick="startSaveTextHint"
             android:text="@string/save_hint_button" />

         <TextView
             android:id="@+id/error_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="#FF0000" />
     </LinearLayout>
       
</RelativeLayout>
