<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PlayerTextRiddleActivity" >
    
        <EditText
        android:id="@+id/player_riddle_text_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"                
        android:hint="@string/riddle_text_hint" />

        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp" >
        	
	        <RadioButton 
	            android:id="@+id/riddle_radio_button_1"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:onClick="radioButtonChanged"/>
		 
		    <EditText
		        android:id="@+id/riddle_answer_field_1"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:hint="@string/riddle_answer_hint" />
		</LinearLayout>
		    
	       <LinearLayout
	           android:layout_width="match_parent"
	           android:layout_height="match_parent"
	           android:orientation="horizontal"
	           android:padding="5dp" >

	        <RadioButton 
	            android:id="@+id/riddle_radio_button_2"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:onClick="radioButtonChanged"/>
		 
		    <EditText
		        android:id="@+id/riddle_answer_field_2"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:hint="@string/riddle_answer_hint" />    
		    
		    </LinearLayout>	        
		    
	       <LinearLayout
	           android:layout_width="match_parent"
	           android:layout_height="match_parent"
	           android:orientation="horizontal"
	           android:padding="5dp" >
	    
	        <RadioButton 
	            android:id="@+id/riddle_radio_button_3"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:onClick="radioButtonChanged"/>
		 
		    <EditText
		        android:id="@+id/riddle_answer_field_3"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:hint="@string/riddle_answer_hint" />   
		    
		    </LinearLayout>	        
		    
	       <LinearLayout
	           android:layout_width="wrap_content"
	           android:layout_height="wrap_content"
	           android:orientation="horizontal"
	           android:padding="5dp" >
	             
	        <RadioButton 
	            android:id="@+id/riddle_radio_button_4"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:onClick="radioButtonChanged"/>
		 
		    <EditText
		        android:id="@+id/riddle_answer_field_4"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:hint="@string/riddle_answer_hint" />    
	    
	    </LinearLayout>      
      
    <CheckBox 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/riddle_is_mandatory_checkbox"
        android:id="@+id/riddle_is_mandatory_id"
        android:checked="true"/>
      <Button
        android:id="@+id/save_hint_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="goToCreateRiddle"
        android:text="@string/save_hint_button" />
      
      
      		<TextView
		    android:id="@+id/error_text"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:textColor="#FF0000" />

</LinearLayout>
</ScrollView>