<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RiddleListActivity" >
    
        <TextView
        android:id="@+id/player_riddle_text_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:textStyle="bold"  />

        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp" >
        	
	        <RadioButton 
	            android:id="@+id/riddle_radio_button_1"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:onClick="radioButtonChanged"/>
		 
		    <TextView
		        android:id="@+id/riddle_answer_field_1"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:hint="@string/riddle_answer_hint" />
		</LinearLayout>
		    
	       <LinearLayout
	           android:layout_width="match_parent"
	           android:layout_height="match_parent"
	           android:orientation="horizontal"
	           android:padding="5dp" >

	        <RadioButton 
	            android:id="@+id/riddle_radio_button_2"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:onClick="radioButtonChanged"/>
		 
		    <TextView
		        android:id="@+id/riddle_answer_field_2"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:hint="@string/riddle_answer_hint" />    
		    
		    </LinearLayout>	        
		    
	       <LinearLayout
	           android:layout_width="match_parent"
	           android:layout_height="match_parent"
	           android:orientation="horizontal"
	           android:padding="5dp" >
	    
	        <RadioButton 
	            android:id="@+id/riddle_radio_button_3"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:onClick="radioButtonChanged"/>
		 
		    <TextView
		        android:id="@+id/riddle_answer_field_3"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:hint="@string/riddle_answer_hint" />   
		    
		    </LinearLayout>	        
		    
	       <LinearLayout
	           android:layout_width="wrap_content"
	           android:layout_height="wrap_content"
	           android:orientation="horizontal"
	           android:padding="5dp" >
	             
	        <RadioButton 
	            android:id="@+id/riddle_radio_button_4"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:onClick="radioButtonChanged"/>
		 
		    <TextView
		        android:id="@+id/riddle_answer_field_4"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:hint="@string/riddle_answer_hint" />    
	    
	    </LinearLayout>
      <Button
        android:id="@+id/go_to_next_riddle_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="goToNextRiddle"
        android:text="@string/go_to_next_riddle" />
      
      <Button
        android:id="@+id/skip_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="skipRiddle"
        android:visibility="gone"
        android:text="@string/skip_riddle" />
      
      
      		<TextView
		    android:id="@+id/error_text"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:textColor="#FF0000" />

</LinearLayout>
</ScrollView>